--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mêsversário IA - Gerador de Memórias</title>
+    <title>Gerador de Fotos de Mesversário</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Quicksand', sans-serif;
-            background-color: #fffaf0;
+            font-family: 'Poppins', sans-serif;
+            background-color: #fdfaf7;
         }
-        .baby-gradient {
-            background: linear-gradient(135deg, #fdf2f8 0%, #fefce8 100%);
-        }
+        .bg-baby-pink { background-color: #fce4ec; }
+        .bg-baby-blue { background-color: #e3f2fd; }
+        .bg-baby-yellow { background-color: #fffde7; }
+        .text-baby-pink { color: #f06292; }
+        .text-baby-blue { color: #42a5f5; }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
   }
 }
 </script>
